--- a/search_box.css
+++ b/search_box.css
@@ -4,6 +4,7 @@
   border-radius   : 40px;
   height          : 40px;
   padding         : 10px;
+  left		  : 45%;
   position        : absolute;
   top             : 55%;
   transform       : translate(-50%, -50%);
